Widget/Finished Game Commits

--- a/CoLabs_CrackSavant/CoLabs_PolishBloke/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CoLabs_CrackSavant/CoLabs_PolishBloke/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -172,7 +172,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/1-ToyPuzzleBP/Widgets
+ContentBrowserDrawer.SelectedPaths=/Game/1-Maps
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -206,15 +206,14 @@ GlobalAssetPicker.ThumbnailSize=2
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/1-Maps/5-TriangleMap
+LastLevel=/Game/1-Maps/1-MainMenuBP
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/1-Maps/5-TriangleMap.5-TriangleMap:PersistentLevel.5-TriangleMap
-OpenAssetsAtExit=/Game/1-ToyPuzzleBP/ToyPuzzleBP.ToyPuzzleBP
-OpenAssetsAtExit=/Game/1-ToyPuzzleBP/BaseMap.BaseMap
-OpenAssetsAtExit=/Game/1-ToyPuzzleBP/TriangleMap.TriangleMap
-OpenAssetsAtExit=/Game/1-ToyPuzzleBP/ToyInstructionMap.ToyInstructionMap
+OpenAssetsAtExit=/Game/1-MainMenuBP/GameEndBP.GameEndBP
+OpenAssetsAtExit=/Game/AA_1-GameEndBP/GameEndBP.GameEndBP
+OpenAssetsAtExit=/Game/1-ToyPuzzleBP/Widgets/6-SquareMap2.6-SquareMap2
+OpenAssetsAtExit=/Game/2-ModSci_Engineer/Blueprints/Door_A_BP.Door_A_BP
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -230,7 +229,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=378.000 Y=185.000
+ScreenPosition=X=178.000 Y=0.000
 WindowSize=X=1284.000 Y=724.000
 InitiallyMaximized=True
 
@@ -1389,42 +1388,45 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/Control
 RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Importers/USDImporter/Content/Python/init_unreal.py
 
 [MRU]
-MRUItem0=/Game/1-Maps/5-TriangleMap
-MRUItem1=/Game/1-Maps/4-ToyInstrucions
-MRUItem2=/Game/1-Maps/1-MainMenuBP
-MRUItem3=/Game/1-Maps/3-EscapeRoom
-MRUItem4=/Game/1-Maps/2-ObjectiveBP
-MRUItem5=/Game/ModSciInteriors/Maps/Example_2_Dynamic
-MRUItem6=/Game/ModSci_EngiProps/Maps/IndividualTemp
-MRUItem7=/Game/ModSci_EngiProps/Maps/IndividualTemp_2
-MRUItem8=/Game/1-Maps/EscapeRoom
-MRUItem9=/Game/1-Maps/Game
-MRUItem10=/Game/1-Maps/Polish
-MRUItem11=/Game/Polish
+MRUItem0=/Game/1-Maps/1-MainMenuBP
+MRUItem1=/Game/1-Maps/8-CircleMap2
+MRUItem2=/Game/1-Maps/9Z-PostPuzzle
+MRUItem3=/Game/1-Maps/9Z-EndGameMap
+MRUItem4=/Game/1-Maps/PostPuzzle
+MRUItem5=/Game/ModSciInteriors/Maps/Example_Stationary
+MRUItem6=/Game/ModSciInteriors/Maps/Example_Dynamic
+MRUItem7=/Game/ModSciInteriors/Maps/Example_2_Dynamic
+MRUItem8=/Game/1-Maps/3-EscapeRoom
+MRUItem9=/Game/1-Maps/9-SquareMap2
+MRUItem10=/Game/1-Maps/5-TriangleMap
+MRUItem11=/Game/1-Maps/6-TriangleMap2
 
 [ContentBrowserRecent]
-MRUItem0=/Game/1-Maps/5-TriangleMap
-MRUItem1=/Game/1-Maps/4-ToyInstrucions
-MRUItem2=/Game/1-Maps/1-MainMenuBP
-MRUItem3=/Game/1-Maps/3-EscapeRoom
-MRUItem4=/Game/1-MainMenuBP/MainMenuBP
-MRUItem5=/Game/1-ToyPuzzleBP/2-TPBP
-MRUItem6=/Game/1-Maps/2-ObjectiveBP
-MRUItem7=/Game/1-ToyPuzzleBP/1-ToyPuzzleWidgetBP
-MRUItem8=/Game/1-ToyPuzzleBP/-1-TPBP
-MRUItem9=/Game/1-ToyPuzzleBP/ToyPuzzleBP
-MRUItem10=/Game/ModSciInteriors/Materials/Lights/M_Base_LightTrim
-MRUItem11=/Game/ModSciInteriors/Materials/Lights/MI_Base_Light_White
-MRUItem12=/Game/1-DoorBPs/KeyCardP
-MRUItem13=/Game/1-ToyPuzzleBP/1-TPBP
-MRUItem14=/Game/1-ToyPuzzleBP/triangle_2
-MRUItem15=/Game/1-ToyPuzzleBP/triangle
-MRUItem16=/Game/1-ToyPuzzleBP/1-TWBP
-MRUItem17=/Game/1-ToyPuzzleBP/ToyPuzzleWidgetBP
-MRUItem18=/Game/1-MainMenuBP/Objective_IntroductionPage
-MRUItem19=/Game/ModSciInteriors/Maps/Example_2_Dynamic
+MRUItem0=/Game/1-Maps/1-MainMenuBP
+MRUItem1=/Game/1-Maps/8-CircleMap2
+MRUItem2=/Game/1-Maps/9Z-PostPuzzle
+MRUItem3=/Game/1-Maps/9Z-EndGameMap
+MRUItem4=/Game/2-ModSci_Engineer/Blueprints/Door_A_BP
+MRUItem5=/Game/1-ToyPuzzleBP/Widgets/6-SquareMap2
+MRUItem6=/Game/1-Maps/PostPuzzle
+MRUItem7=/Game/AA_1-GameEndBP/GameEndBP
+MRUItem8=/Game/ModSciInteriors/Maps/Example_Stationary
+MRUItem9=/Game/ModSciInteriors/Maps/Example_Dynamic
+MRUItem10=/Game/ModSciInteriors/Maps/Example_2_Dynamic
+MRUItem11=/Game/1-MainMenuBP/GameEndBP
+MRUItem12=/Game/1-DoorBPs/NotUsed
+MRUItem13=/Game/1-ToyPuzzleBP/Fake_Complete
+MRUItem14=/Game/1-ToyPuzzleBP/Widgets/BaseMap
+MRUItem15=/Game/1-Maps/3-EscapeRoom
+MRUItem16=/Game/1-MainMenuBP/Objective_IntroductionPage
+MRUItem17=/Game/1-MainMenuBP/MainMenuBP
+MRUItem18=/Game/1-Maps/9-SquareMap2
+MRUItem19=/Game/1-Maps/5-TriangleMap
 
 [PlacementMode]
+RecentlyPlaced=/Game/AA_1-GameEndBP/GameEndBP.GameEndBP;
+RecentlyPlaced=/Game/1-DoorBPs/NotUsed.NotUsed;
+RecentlyPlaced=/Game/1-ToyPuzzleBP/Fake_Complete.Fake_Complete;
 RecentlyPlaced=/Game/1-DoorBPs/KeyCardP.KeyCardP;
 RecentlyPlaced=/Game/1-ToyPuzzleBP/ToyPuzzleBP.ToyPuzzleBP;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -2012,7 +2014,7 @@ VerticalBox.Navigation=True
 VerticalBox.Localization=True
 Button.Layout=True
 Button.Appearance=True
-Button.Interaction=False
+Button.Interaction=True
 Button.Accessibility=False
 Button.Behavior=False
 Button.Render Transform=True
@@ -2114,6 +2116,7 @@ CameraComponent.Events=True
 Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
@@ -2162,7 +2165,6 @@ MainMenuBP_C.Clipping=True
 MainMenuBP_C.Navigation=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
-Texture2D.Interchange =True
 PlayerStart.TransformCommon=True
 PlayerStart.Object=True
 PlayerStart.Rendering=True
@@ -2227,12 +2229,112 @@ K2Node_VariableSet.DefaultValueCategory=True
 5-TriangleMap_C.Physics=True
 5-TriangleMap_C.WorldPartition=True
 5-TriangleMap_C.Events=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+9-SquareMap2_C.Tick=True
+9-SquareMap2_C.Replication=True
+9-SquareMap2_C.Actor=True
+9-SquareMap2_C.Input=True
+9-SquareMap2_C.HLOD=True
+9-SquareMap2_C.Physics=True
+9-SquareMap2_C.WorldPartition=True
+9-SquareMap2_C.Events=True
+9-SquareMap_C.Tick=True
+9-SquareMap_C.Replication=True
+9-SquareMap_C.Actor=True
+9-SquareMap_C.Input=True
+9-SquareMap_C.HLOD=True
+9-SquareMap_C.Physics=True
+9-SquareMap_C.WorldPartition=True
+9-SquareMap_C.Events=True
+8-CircleMap2_C.Tick=True
+8-CircleMap2_C.Replication=True
+8-CircleMap2_C.Actor=True
+8-CircleMap2_C.Input=True
+8-CircleMap2_C.HLOD=True
+8-CircleMap2_C.Physics=True
+8-CircleMap2_C.WorldPartition=True
+8-CircleMap2_C.Events=True
+6-SquareMap2_C.Appearance=True
+6-SquareMap2_C.Input=True
+6-SquareMap2_C.Interaction=True
+6-SquareMap2_C.Designer=True
+6-SquareMap2_C.Performance=True
+6-SquareMap2_C.Layout=True
+6-SquareMap2_C.Behavior=True
+6-SquareMap2_C.Render Transform=True
+6-SquareMap2_C.Localization=True
+6-SquareMap2_C.Accessibility=True
+6-SquareMap2_C.Clipping=True
+6-SquareMap2_C.Navigation=True
+7-CircleMap_C.Tick=True
+7-CircleMap_C.Replication=True
+7-CircleMap_C.Actor=True
+7-CircleMap_C.Input=True
+7-CircleMap_C.HLOD=True
+7-CircleMap_C.Physics=True
+7-CircleMap_C.WorldPartition=True
+7-CircleMap_C.Events=True
+6-TriangleMap2_C.Tick=True
+6-TriangleMap2_C.Replication=True
+6-TriangleMap2_C.Actor=True
+6-TriangleMap2_C.Input=True
+6-TriangleMap2_C.HLOD=True
+6-TriangleMap2_C.Physics=True
+6-TriangleMap2_C.WorldPartition=True
+6-TriangleMap2_C.Events=True
+ToyPuzzleBP_C.Default=True
+Fake_Complete_C.Default=True
+Fake_Complete_C.Tick=True
+Fake_Complete_C.Replication=True
+Fake_Complete_C.Rendering=True
+Fake_Complete_C.Collision=True
+Fake_Complete_C.Actor=True
+Fake_Complete_C.Input=True
+Fake_Complete_C.HLOD=True
+Fake_Complete_C.Physics=True
+Fake_Complete_C.WorldPartition=True
+Fake_Complete_C.Events=True
+Fake_Complete_C.TransformCommon=True
+Fake_Complete_C.Networking=True
+NotUsed_C.TransformCommon=True
+NotUsed_C.Rendering=True
+NotUsed_C.Replication=True
+NotUsed_C.Collision=True
+NotUsed_C.HLOD=True
+NotUsed_C.Physics=True
+NotUsed_C.Networking=True
+NotUsed_C.Input=True
+NotUsed_C.Actor=True
+NotUsed_C.Tick=True
+NotUsed_C.WorldPartition=True
+NotUsed_C.Events=True
+GameEndBP_C.Tick=True
+GameEndBP_C.Replication=True
+GameEndBP_C.Rendering=True
+GameEndBP_C.Collision=True
+GameEndBP_C.Actor=True
+GameEndBP_C.Input=True
+GameEndBP_C.HLOD=True
+GameEndBP_C.Physics=True
+GameEndBP_C.WorldPartition=True
+GameEndBP_C.Events=True
+GameEndBP_C.TransformCommon=True
+GameEndBP_C.Networking=True
+9Z-EndGameMap_C.Tick=True
+9Z-EndGameMap_C.Replication=True
+9Z-EndGameMap_C.Actor=True
+9Z-EndGameMap_C.Input=True
+9Z-EndGameMap_C.HLOD=True
+9Z-EndGameMap_C.Physics=True
+9Z-EndGameMap_C.WorldPartition=True
+9Z-EndGameMap_C.Events=True
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values
 MaterialInstanceConstant=
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.KeyCards
-BP_FirstPersonCharacter_C=
+BP_FirstPersonCharacter_C=PropertyWrapper.DefaultValueCategory.KeyCards
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.KeyCards
 KeyCardP_C=PropertyWrapper.DefaultValueCategory.KeyCards
 SceneComponent=
@@ -2347,12 +2449,12 @@ MainMenuBP_C=PropertyWrapper.DefaultValueCategory.KeyCards
 Objective_IntroductionPage_C=PropertyWrapper.DefaultValueCategory.KeyCards
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
-ToyPuzzleBP_C=PropertyWrapper.DefaultValueCategory.KeyCards
+ToyPuzzleBP_C=
 Actor=PropertyWrapper.DefaultValueCategory.KeyCards
 PointLight=PropertyWrapper.DefaultValueCategory.KeyCards
 Door_A_Close_BP_C=PropertyWrapper.DefaultValueCategory.KeyCards
 ToyPuzzleWidgetBP_C=PropertyWrapper.DefaultValueCategory.KeyCards
-CapsuleComponent=PropertyWrapper.DefaultValueCategory.KeyCards
+CapsuleComponent=
 PlayerStart=PropertyWrapper.DefaultValueCategory.KeyCards
 BoxComponent=PropertyWrapper.DefaultValueCategory.KeyCards
 StaticMeshComponent=
@@ -2364,6 +2466,16 @@ K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.KeyCards
 ToyInstructionMap_C=PropertyWrapper.DefaultValueCategory.KeyCards
 PlayerController=PropertyWrapper.DefaultValueCategory.KeyCards
 TriangleMap_C=PropertyWrapper.DefaultValueCategory.KeyCards
+1-TriangleMap_C=PropertyWrapper.DefaultValueCategory.KeyCards
+2-TriangleMap2_C=PropertyWrapper.DefaultValueCategory.KeyCards
+3-CircleMap_C=PropertyWrapper.DefaultValueCategory.KeyCards
+4-CircleMap2_C=PropertyWrapper.DefaultValueCategory.KeyCards
+6-SquareMap2_C=PropertyWrapper.DefaultValueCategory.KeyCards
+5-SquareMap_C=PropertyWrapper.DefaultValueCategory.KeyCards
+K2Node=PropertyWrapper.DefaultValueCategory.KeyCards
+Fake_Complete_C=PropertyWrapper.DefaultValueCategory.KeyCards
+NotUsed_C=PropertyWrapper.DefaultValueCategory.KeyCards
+GameEndBP_C=PropertyWrapper.DefaultValueCategory.KeyCards
 
 [AssetEditorToolkitTabLocation]
 /Game/ModSci_Engineer/Materials/MI_Trim_A_Red2.MI_Trim_A_Red2=1
@@ -2395,6 +2507,24 @@ TriangleMap_C=PropertyWrapper.DefaultValueCategory.KeyCards
 /Game/1-ToyPuzzleBP/BaseMap.BaseMap=1
 /Game/1-ToyPuzzleBP/TriangleMap.TriangleMap=1
 /Game/1-ToyPuzzleBP/ToyInstructionMap.ToyInstructionMap=1
+/Game/1-Maps/9-SquareMap2.9-SquareMap2:PersistentLevel.9-SquareMap2=1
+/Game/1-Maps/9-SquareMap.9-SquareMap:PersistentLevel.9-SquareMap=1
+/Game/1-Maps/8-CircleMap2.8-CircleMap2:PersistentLevel.8-CircleMap2=1
+/Game/1-Maps/7-CircleMap.7-CircleMap:PersistentLevel.7-CircleMap=1
+/Game/1-Maps/6-TriangleMap2.6-TriangleMap2:PersistentLevel.6-TriangleMap2=1
+/Game/1-ToyPuzzleBP/Widgets/2-TriangleMap2.2-TriangleMap2=1
+/Game/1-ToyPuzzleBP/Widgets/3-CircleMap.3-CircleMap=1
+/Game/1-ToyPuzzleBP/Widgets/4-CircleMap2.4-CircleMap2=1
+/Game/1-ToyPuzzleBP/Widgets/5-SquareMap.5-SquareMap=1
+/Game/1-ToyPuzzleBP/Widgets/6-SquareMap2.6-SquareMap2=1
+/Game/1-ToyPuzzleBP/Widgets/ToyInstructionMap.ToyInstructionMap=1
+/Game/1-ToyPuzzleBP/Widgets/1-TriangleMap.1-TriangleMap=1
+/Game/2-ModSci_Engineer/Blueprints/Door_A_BP.Door_A_BP=1
+/Game/1-ToyPuzzleBP/Widgets/BaseMap.BaseMap=1
+/Game/1-ToyPuzzleBP/Fake_Complete.Fake_Complete=1
+/Game/AA_1-GameEndBP/GameEndBP.GameEndBP=1
+/Game/1-Maps/9Z-EndGameMap.9Z-EndGameMap:PersistentLevel.9Z-EndGameMap=1
+/Game/1-MainMenuBP/GameEndBP.GameEndBP=1
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -2579,7 +2709,7 @@ ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
-Object="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" "
+Object="\"Object\" "
 BP_FirstPersonCharacter_C=
 Character=
 Pawn=
@@ -2698,12 +2828,12 @@ TcpMessagingSettings="\"Object\" "
 UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 VerticalBox="\"Object\" "
-PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.ColorAndOpacity\" "
+PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" "
 Widget="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" "
 Visual="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" "
 CanvasPanel="\"Object\" "
-Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.ColorAndOpacity\" "
-ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.ColorAndOpacity\" "
+Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" "
+ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" "
 MainMenuBP_C="\"Object\" "
 UserWidget="\"Object\" "
@@ -2750,6 +2880,13 @@ BillboardComponent="\"Object\" "
 -1-TPBP_C="\"Object\" "
 ToyInstructionMap_C="\"Object\" "
 TriangleMap_C="\"Object\" "
+1-TriangleMap_C="\"Object\" "
+2-TriangleMap2_C="\"Object\" "
+3-CircleMap_C="\"Object\" "
+4-CircleMap2_C="\"Object\" "
+6-SquareMap2_C="\"Object\" "
+5-SquareMap_C="\"Object\" "
+GameEndBP_C="\"Object\" "
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
