--- a/CoLabs_CrackSavant/CoLabs_PolishBloke/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CoLabs_CrackSavant/CoLabs_PolishBloke/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -209,11 +209,7 @@ GlobalAssetPicker.CurrentViewType=0
 LastLevel=/Game/1-Maps/1-MainMenuBP
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/1-MainMenuBP/GameEndBP.GameEndBP
-OpenAssetsAtExit=/Game/AA_1-GameEndBP/GameEndBP.GameEndBP
-OpenAssetsAtExit=/Game/1-ToyPuzzleBP/Widgets/6-SquareMap2.6-SquareMap2
-OpenAssetsAtExit=/Game/2-ModSci_Engineer/Blueprints/Door_A_BP.Door_A_BP
+CleanShutdown=False
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -247,7 +243,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/AA_PC/Documents/GitHub/CoLabs_CrackSavant-Y2T1/CoLabs_CrackSavant/CoLabs_PolishBloke/Content/1-Maps
+UNR=../../../../../../Users/AA_PC/Documents/GitHub/CoLabs_CrackSavant-Y2T1/CoLabs_CrackSavant/CoLabs_PolishBloke/Content/ModSciInteriors/Maps
 BRUSH=../../../../../../Users/22498912/OneDrive - MMU/Documents/GitHub/CoLabs_CrackSavant-Y2T1/CoLabs_CrackSavant/CoLabs_PolishBloke/Content/
 FBX=../../../../../../Users/22498912/OneDrive - MMU/Documents/GitHub/CoLabs_CrackSavant-Y2T1/CoLabs_CrackSavant/CoLabs_PolishBloke/Content/
 FBXAnim=../../../../../../Users/22498912/OneDrive - MMU/Documents/GitHub/CoLabs_CrackSavant-Y2T1/CoLabs_CrackSavant/CoLabs_PolishBloke/Content/
@@ -1389,39 +1385,39 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Importers/USDImpo
 
 [MRU]
 MRUItem0=/Game/1-Maps/1-MainMenuBP
-MRUItem1=/Game/1-Maps/8-CircleMap2
-MRUItem2=/Game/1-Maps/9Z-PostPuzzle
-MRUItem3=/Game/1-Maps/9Z-EndGameMap
-MRUItem4=/Game/1-Maps/PostPuzzle
-MRUItem5=/Game/ModSciInteriors/Maps/Example_Stationary
-MRUItem6=/Game/ModSciInteriors/Maps/Example_Dynamic
-MRUItem7=/Game/ModSciInteriors/Maps/Example_2_Dynamic
-MRUItem8=/Game/1-Maps/3-EscapeRoom
+MRUItem1=/Game/ModSciInteriors/Maps/Example_Dynamic
+MRUItem2=/Game/ModSciInteriors/Maps/Example_2_Dynamic
+MRUItem3=/Game/1-Maps/3-EscapeRoom
+MRUItem4=/Game/1-Maps/8-CircleMap2
+MRUItem5=/Game/1-Maps/9Z-PostPuzzle
+MRUItem6=/Game/1-Maps/9Z-EndGameMap
+MRUItem7=/Game/1-Maps/PostPuzzle
+MRUItem8=/Game/ModSciInteriors/Maps/Example_Stationary
 MRUItem9=/Game/1-Maps/9-SquareMap2
 MRUItem10=/Game/1-Maps/5-TriangleMap
 MRUItem11=/Game/1-Maps/6-TriangleMap2
 
 [ContentBrowserRecent]
 MRUItem0=/Game/1-Maps/1-MainMenuBP
-MRUItem1=/Game/1-Maps/8-CircleMap2
-MRUItem2=/Game/1-Maps/9Z-PostPuzzle
-MRUItem3=/Game/1-Maps/9Z-EndGameMap
-MRUItem4=/Game/2-ModSci_Engineer/Blueprints/Door_A_BP
-MRUItem5=/Game/1-ToyPuzzleBP/Widgets/6-SquareMap2
-MRUItem6=/Game/1-Maps/PostPuzzle
-MRUItem7=/Game/AA_1-GameEndBP/GameEndBP
-MRUItem8=/Game/ModSciInteriors/Maps/Example_Stationary
-MRUItem9=/Game/ModSciInteriors/Maps/Example_Dynamic
-MRUItem10=/Game/ModSciInteriors/Maps/Example_2_Dynamic
-MRUItem11=/Game/1-MainMenuBP/GameEndBP
-MRUItem12=/Game/1-DoorBPs/NotUsed
-MRUItem13=/Game/1-ToyPuzzleBP/Fake_Complete
-MRUItem14=/Game/1-ToyPuzzleBP/Widgets/BaseMap
-MRUItem15=/Game/1-Maps/3-EscapeRoom
-MRUItem16=/Game/1-MainMenuBP/Objective_IntroductionPage
-MRUItem17=/Game/1-MainMenuBP/MainMenuBP
-MRUItem18=/Game/1-Maps/9-SquareMap2
-MRUItem19=/Game/1-Maps/5-TriangleMap
+MRUItem1=/Game/1-DoorBPs/KeyCardP
+MRUItem2=/Game/ModSciInteriors/Maps/Example_Dynamic
+MRUItem3=/Game/ModSciInteriors/Maps/Example_2_Dynamic
+MRUItem4=/Game/1-Maps/3-EscapeRoom
+MRUItem5=/Game/1-Maps/8-CircleMap2
+MRUItem6=/Game/1-Maps/9Z-PostPuzzle
+MRUItem7=/Game/1-Maps/9Z-EndGameMap
+MRUItem8=/Game/2-ModSci_Engineer/Blueprints/Door_A_BP
+MRUItem9=/Game/1-ToyPuzzleBP/Widgets/6-SquareMap2
+MRUItem10=/Game/1-Maps/PostPuzzle
+MRUItem11=/Game/AA_1-GameEndBP/GameEndBP
+MRUItem12=/Game/ModSciInteriors/Maps/Example_Stationary
+MRUItem13=/Game/1-MainMenuBP/GameEndBP
+MRUItem14=/Game/1-DoorBPs/NotUsed
+MRUItem15=/Game/1-ToyPuzzleBP/Fake_Complete
+MRUItem16=/Game/1-ToyPuzzleBP/Widgets/BaseMap
+MRUItem17=/Game/1-MainMenuBP/Objective_IntroductionPage
+MRUItem18=/Game/1-MainMenuBP/MainMenuBP
+MRUItem19=/Game/1-Maps/9-SquareMap2
 
 [PlacementMode]
 RecentlyPlaced=/Game/AA_1-GameEndBP/GameEndBP.GameEndBP;
