--- a/CoLabs_CrackSavant/CoLabs_PolishBloke/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CoLabs_CrackSavant/CoLabs_PolishBloke/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -209,7 +209,7 @@ GlobalAssetPicker.CurrentViewType=0
 LastLevel=/Game/1-Maps/1-MainMenuBP
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -243,7 +243,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/AA_PC/Documents/GitHub/CoLabs_CrackSavant-Y2T1/CoLabs_CrackSavant/CoLabs_PolishBloke/Content/ModSciInteriors/Maps
+UNR=../../../../../../Users/AA_PC/Documents/GitHub/CoLabs_CrackSavant-Y2T1/CoLabs_CrackSavant/CoLabs_PolishBloke/Content/1-Maps
 BRUSH=../../../../../../Users/22498912/OneDrive - MMU/Documents/GitHub/CoLabs_CrackSavant-Y2T1/CoLabs_CrackSavant/CoLabs_PolishBloke/Content/
 FBX=../../../../../../Users/22498912/OneDrive - MMU/Documents/GitHub/CoLabs_CrackSavant-Y2T1/CoLabs_CrackSavant/CoLabs_PolishBloke/Content/
 FBXAnim=../../../../../../Users/22498912/OneDrive - MMU/Documents/GitHub/CoLabs_CrackSavant-Y2T1/CoLabs_CrackSavant/CoLabs_PolishBloke/Content/
